[package]
name = "axum-train"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.3"
tokio = { version="1.35.1", features = ["full"] }
tower = "0.4.13"
hyper = { version="1.1.0", features = ["full"] }
mime = "0.3.17"
anyhow = "1.0.78"
serde = { version="1.0.136", features=["derive"]}
serde_json = "1.0.78"
dotenv = "0.15.0"
